--- a/libft/makefile
+++ b/libft/makefile
@@ -1,17 +1,50 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 OBJS = $(SRCS:.c=.o) 
-SRCS = srcs/ft_putchar.c srcs/ft_swap.c srcs/ft_putstr.c srcs/ft_strlen.c srcs/ft_strcmp.c
-INC = -I ./includes
 NAME = libft.a
 RM = rm -f
- 
+SRCS = ft_isalpha.c \
+				ft_isdigit.c \
+				ft_isalnum.c \
+				ft_isacii.c \
+				ft_isprint.c \
+				ft_strlen.c \
+				ft_memset.c \
+				ft_bzero.c \
+				ft_memcpy.c \
+				ft_memmove.c \
+				ft_strlcpy.c \
+				ft_strlcat.c \
+				ft_strncmp.c \
+				ft_toupper.c \
+				ft_tolower.c \
+				ft_strchr.c \
+				ft_strrchr.c \
+				ft_memchr.c \
+				ft_memcmp.c \
+				ft_strnstr.c \
+				ft_atoi.c \
+				ft_calloc.c \
+				ft_strdup.c \
+				ft_substr.c \
+				ft_strjoin.c \
+				ft_strtrim.c \
+				ft_split.c \
+				ft_itoa.c \
+				ft_strmapi.c \
+				ft_striteri.c \
+				ft_putchar_fd.c \
+				ft_putstr_fd.c \
+				ft_putstr_fd.c \
+				ft_putendl_fd.c \
+				ft_putnbr_fd.c
+
 all : $(NAME)
 $(NAME) : $(OBJS)
 	ar rc $@ $(OBJS)
 
 %.o: %.c 
-	$(CC) $(INC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	$(RM) $(OBJS)
@@ -20,3 +53,5 @@ fclean: clean
 	$(RM) $(NAME)
 
 re : fclean all
+
+.PHONY : all clean fclean re
