--- a/libft/makefile
+++ b/libft/makefile
@@ -6,7 +6,7 @@ RM = rm -f
 SRCS = ft_isalpha.c \
 				ft_isdigit.c \
 				ft_isalnum.c \
-				ft_isacii.c \
+				ft_isascii.c \
 				ft_isprint.c \
 				ft_strlen.c \
 				ft_memset.c \
@@ -29,19 +29,19 @@ SRCS = ft_isalpha.c \
 				ft_substr.c \
 				ft_strjoin.c \
 				ft_strtrim.c \
-				ft_split.c \
 				ft_itoa.c \
 				ft_strmapi.c \
 				ft_striteri.c \
 				ft_putchar_fd.c \
 				ft_putstr_fd.c \
-				ft_putstr_fd.c \
 				ft_putendl_fd.c \
-				ft_putnbr_fd.c
+				ft_putnbr_fd.c \
+				ft_split.c \
 
 all : $(NAME)
+
 $(NAME) : $(OBJS)
-	ar rc $@ $(OBJS)
+	ar crs $@ $(OBJS)
 
 %.o: %.c 
 	$(CC) $(CFLAGS) -c $< -o $@
@@ -52,6 +52,6 @@ clean:
 fclean: clean
 	$(RM) $(NAME)
 
-re : fclean all
+re: fclean all
 
 .PHONY : all clean fclean re
