--- a/so_long/libft/Makefile
+++ b/so_long/libft/Makefile
@@ -26,6 +26,7 @@ SRCS = ft_isalpha.c \
 				ft_atoi.c \
 				ft_calloc.c \
 				ft_strdup.c \
+				ft_strndup.c \
 				ft_substr.c \
 				ft_strjoin.c \
 				ft_strtrim.c \
