--- a/so_long/libft/Makefile
+++ b/so_long/libft/Makefile
@@ -1,4 +1,16 @@
-CC = gcc
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: yeselee <yeselee@student.42.fr>            +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/12/01 14:58:01 by yeselee           #+#    #+#              #
+#    Updated: 2022/12/01 14:58:22 by yeselee          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
+CC = cc
 CFLAGS = -Wall -Wextra -Werror
 OBJS = $(SRCS:.c=.o) 
 NAME = libft.a
