--- a/CPP/CPP Module 04/ex03/Makefile
+++ b/CPP/CPP Module 04/ex03/Makefile
@@ -5,7 +5,7 @@ CXXFLAGS	=	-Wall -Wextra -Werror -std=c++98
 RM			=	rm -rf
 
 # FILES
-SRCS	=	main.cpp
+SRCS	=	main.cpp AMateria.cpp Character.cpp Cure.cpp Ice.cpp MateriaSource.cpp
 OBJ_M		=	$(SRCS:.cpp=.o)
 
 #COMMANDS
