--- a/inception/practice/docker-compose.yml
+++ b/inception/practice/docker-compose.yml
@@ -1,24 +1,31 @@
+version: "3.3"
+    
 services:
-  mysql:
-    image: mysql:8.0
+  db:
+    image: mysql:5.7
     volumes:
-      - mysql-data:/var/lib/mysql
+      - db_data:/var/lib/mysql
+    restart: always
     environment:
-      MYSQL_RANDOM_ROOT_PASSWORD: true
+      MYSQL_ROOT_PASSWORD: somewordpress
       MYSQL_DATABASE: wordpress
       MYSQL_USER: wordpress
-      MYSQL_PASSWORD: awesome-wordpress-password
-
+      MYSQL_PASSWORD: wordpress
+    
   wordpress:
     depends_on:
-      - mysql
+      - db
     image: wordpress:latest
+    volumes:
+      - wordpress_data:/var/www/html
     ports:
-      - "3000:80"
+      - "8000:80"
+    restart: always
     environment:
-      WORDPRESS_DB_HOST: mysql:3306
+      WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: awesome-wordpress-password
-
+      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_NAME: wordpress
 volumes:
-  mysql-data:
+  db_data: {}
+  wordpress_data: {}
