--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -1,16 +1,20 @@
 # 베이스 이미지
 FROM debian:bullseye
 
+# ENV MYSQL_ROOT_PASSWORD=1234
+
 RUN apt-get update -y && \
 	apt-get upgrade -y && \
-	# apt-get install dumb-init -y
-	apt-get install mariadb-server mariadb-client
+	apt-get install -y dumb-init
+
+RUN apt-get install mariadb-server
 
 COPY ./tools/setup.sh /setup.sh
 
 # 3306 포트로 내부에서만 연결 가능
 EXPOSE 3306
 
-# ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+CMD ["mariadb"]
 
-CMD ["sh", "/setup.sh"]
+# CMD ["sh", "/setup.sh"]
