--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -9,6 +9,12 @@ volumes:
       type: none # 로컬 파일에 바인딩하는 경우 타입 지정 x
       o: bind # 볼륨을 바인딩 할 것이다
       device: ./${USER}/data/mariadb # 파일 시스템 경로 지정, 이 경로로 볼륨이 바인딩됨
+  wp:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ./${USER}/data/wp
 
 services:
   mariadb:
