wordpress 접속 확인

--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -1,5 +1,18 @@
 MARIADB_ROOT_PASSWORD=1234
 
+DB_HOST=mariadb
 DB_NAME=MARIADB
 DB_USER=yeselee
 DB_PWD=1234
+
+# WORDPRESS SETUP
+DOMAIN_NAME=yeselee.42.fr
+WP_TITLE=hello
+WP_ADMIN_USER=yeselee
+WP_ADMIN_PWD=1234
+WP_ADMIN_EMAIL=yeselee@student.42seoul.kr
+
+# WORDPRESS USER SETUP
+WP_USER=yes
+WP_USER_PWD=1234
+WP_USER_EMAIL=yes@student.42seoul.kr
