--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -8,17 +8,17 @@ volumes:
     driver_opts: # 추가 옵션 설정
       type: none # 로컬 파일에 바인딩하는 경우 타입 지정 x
       o: bind # 볼륨을 바인딩 할 것이다
-      device: /Users/yeselee/data/mariadb # 파일 시스템 경로 지정, 이 경로로 볼륨이 바인딩됨
+      device: ./yeselee/data/mariadb # 파일 시스템 경로 지정, 이 경로로 볼륨이 바인딩됨
   wp:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: /Users/yeselee/data/wp
+      device: ./yeselee/data/wp
 
 services:
   mariadb:
-    build: requirements/mariadb
+    build: ./requirements/mariadb
     image: mariadb
     container_name: mariadb
     env_file:
@@ -27,7 +27,7 @@ services:
       - db:/var/lib/mysql
     restart: always
     networks:
-      - intra
+      - inception_network
 
   wordpress:
     depends_on:
@@ -35,25 +35,32 @@ services:
     build: requirements/wordpress
     image: wordpress
     container_name: wordpress
+    env_file:
+      - ./.env
     volumes:
-      - wp:/var/lib/html
+      - wp:/var/www/html/wordpress
     restart: always
     networks:
-      - intra
+      - inception_network
 
   nginx:
     # dockerfile 경로
-    build: requirements/nginx
+    build: ./requirements/nginx
     # 이 이름으로 이미 빌드된 이미지가 있는지 찾고, 없으면 빌드함
     image: nginx
     container_name: nginx
     ports:
       - 443:443
+    volumes:
+      - wp:/var/www/html/wordpress
     restart: always
+    networks:
+      - inception_network
 
   # wordpress:
 
 networks:
   # 정의한 네트워크 이름
-  intra:
+  inception_network:
+    name: inception_network
     driver: bridge
