--- a/inception/srcs/requirements/nginx/conf/default.conf
+++ b/inception/srcs/requirements/nginx/conf/default.conf
@@ -1,5 +1,6 @@
 server	{
 		listen 443 ssl;
+		listen [::]:443 ssl;
 
 		server_name localhost;
 
@@ -9,11 +10,16 @@ server	{
 		ssl_certificate_key /etc/ssl/private/inception.dev.key;
 		ssl_protocols TLSv1.2 TLSv1.3;
 
-		root /var/www/html;
-
-		index index.html index.htm index.php index.nginx-debian.html;
-
 		location / {
-		try_files $uri $uri/ =404;
+			index index.html index.htm index.php index.nginx-debian.html;
+			# 요청 url에 대응하는 로컬 파일 시스템의 경로
+			root /var/www/html/wordpress;
+			try_files $uri $uri/ =404;
+			location ~ \.php$ {
+				fastcgi_pass wordpress:9000;
+				fastcgi_index index.php;
+				fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+				include fastcgi_params;
+			}
 		}
 }
