--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -5,7 +5,7 @@ FROM debian:bullseye
 
 RUN apt-get update -y && \
 	apt-get upgrade -y && \
-	apt-get install -y dumb-init
+	apt-get install -y dumb-init dos2unix
 
 RUN apt-get install -y mariadb-server mariadb-client
 
@@ -19,6 +19,7 @@ COPY ./tools/setup.sh /setup.sh
 # 기본 설정
 COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 
+RUN dos2unix /setup.sh
 
 # 3306 포트로 내부에서만 연결 가능
 EXPOSE 3306
