--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -1,18 +1,23 @@
-MARIADB_ROOT_PASSWORD=1234
+# MARIADB SETTING
+MYSQL_ROOT=root
+MYSQL_ROOT_PASSWORD=0000
 
-DB_HOST=mariadb
 DB_NAME=MARIADB
-DB_USER=yeselee
-DB_PWD=1234
+DB_HOST=MARIADB
 
-# WORDPRESS SETUP
+DB_USER=yeselee
+DB_PASSWORD=0000
+
+# WORDPRESS SETTING
 DOMAIN_NAME=yeselee.42.fr
 WP_TITLE=hello
+
+# WORDPRESS ADMIN SETTING
 WP_ADMIN_USER=yeselee
-WP_ADMIN_PWD=1234
+WP_ADMIN_PASSWORD=0000
 WP_ADMIN_EMAIL=yeselee@student.42seoul.kr
 
-# WORDPRESS USER SETUP
+# WORDPRESS USER SETTING
 WP_USER=yes
-WP_USER_PWD=1234
+WP_USER_PASSWORD=0000
 WP_USER_EMAIL=yes@student.42seoul.kr
