--- a/inception/srcs/requirements/wordpress/Dockerfile
+++ b/inception/srcs/requirements/wordpress/Dockerfile
@@ -1,36 +1,25 @@
-# 베이스 이미지
 FROM debian:bullseye
 
-RUN apt-get update -y && \
-	apt-get upgrade -y && \
-	apt-get install -y dumb-init
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y dumb-init curl mariadb-client php7.4-fpm php-mysql
 
-RUN apt-get install -y mariadb-client curl php7.4-fpm php-mysql
-
-# wp-cli 설치, 명령줄에서 사용하기 위해 권한 변경
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
-	chmod +x wp-cli.phar && \
-	mv wp-cli.phar /usr/local/bin && \
-	ln -sf /usr/local/bin/wp-cli.phar /usr/local/bin/wp
+    chmod +x wp-cli.phar && \
+    mv wp-cli.phar /usr/local/bin && \
+    ln -sf /usr/local/bin/wp-cli.phar /usr/local/bin/wp-cli
 
-RUN mkdir -p /run/php
+RUN mkdir -p /var/www/html/wordpress /run/php && \
+    usermod -G www-data -a www-data && \
+    chown -R www-data:www-data /var/www/
 
-COPY ./conf/www.conf /etc/php-fpm.d/www.conf
-COPY ./tools/setup.sh /setup.sh
-RUN chmod +x /setup.sh
+COPY ./conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
+COPY ./tools/setting.sh /setting.sh
 
-RUN mkdir -p /var/www/html/wordpress && \
-	chown -R www-data:www-data /var/www/
-
-# 3306, 9000 포트로 내부에서만 연결 가능
-EXPOSE 3306 9000
+RUN chmod +x setting.sh
 
 WORKDIR /var/www/html/wordpress
 
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
 
-CMD ["sh", "/setup.sh"]
-
-# CMD ["mysqld"]
-
-# CMD ["sh", "/setup.sh"]
+CMD ["sh", "/setting.sh"]
