--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -1,31 +1,21 @@
-# 베이스 이미지
 FROM debian:bullseye
 
-# ENV MYSQL_ROOT_PASSWORD=1234
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y dumb-init mariadb-server mariadb-client vim
 
-RUN apt-get update -y && \
-	apt-get upgrade -y && \
-	apt-get install -y dumb-init dos2unix
-
-RUN apt-get install -y mariadb-server mariadb-client
-
-# 소유자, 그룹을 mysql로 변경
 RUN mkdir -p /var/run/mysqld && \
-	chown -R mysql:mysql /var/run/mysqld &&\
-	chmod 777 /var/run/mysqld
+    chown -R mysql:mysql /var/run/mysqld && \
+    chmod 777 /var/run/mysqld
 
-# db, user, 권한 설정
-COPY ./tools/setup.sh /setup.sh
-# 기본 설정
+COPY ./tools/setting.sh /setting.sh
+
+RUN chmod +x setting.sh
+
+RUN rm -f /etc/mysql/mariadb.conf.d/50-server.cnf
+
 COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
-
-RUN dos2unix /setup.sh
-
-# 3306 포트로 내부에서만 연결 가능
-EXPOSE 3306
 
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
 
-# CMD ["mysqld"]
-
-CMD ["sh", "/setup.sh"]
+CMD ["sh", "/setting.sh"]
