--- a/inception/srcs/requirements/wordpress/conf/www.conf
+++ b/inception/srcs/requirements/wordpress/conf/www.conf
@@ -1,15 +1,11 @@
 [www]
-
-# nginx user & group
 user = www-data
 group = www-data
-
-# default www.conf setting
+listen = wordpress:9000
+listen.owner = www-data
+listen.group = www-data
 pm = dynamic
 pm.max_children = 5
 pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
-
-# changed listen ip:port
-listen = 0.0.0.0:9000
